k8s/back-office.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: back-office
  labels:
    app: back-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-office
  template:
    metadata:
      labels:
        app: back-office
    spec:
      containers:
        - name: back-office
          image: osvasldas97/back-office:1.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: back-office
  labels:
    app: back-office
spec:
  selector:
    app: back-office
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: NodePort
