k8s/maildev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: maildev
  labels:
    app: maildev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
        - name: maildev
          image: maildev/maildev:latest
          ports:
            - containerPort: 1080
            - containerPort: 1025

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: maildev
  labels:
    app: maildev
spec:
  type: NodePort
  selector:
    app: maildev
  ports:
    - name: http
      port: 1080
    - name: client
      port: 1025
