k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: loans
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "1000m"
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
      volumes:
        - name: data
          emptyDir: { }

---

apiVersion: v1
kind: Service
metadata:
  namespace: loans
  name: redis
  labels:
    app: redis
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - name: client
      port: 6379
