k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osber-ingress
  namespace: loans
spec:
  ingressClassName: nginx
  rules:
    - host: back-office.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-office
                port:
                  number: 8080
    - host: risk.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: risk-checker
                port:
                  number: 8081
    - host: notifications.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8082
    - host: vault.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
    - host: redis.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-commander
                port:
                  number: 8081
    - host: rabbitmq.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
    - host: prometheus.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: pgadmin.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
    - host: mailhog.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailhog
                port:
                  number: 8025
    - host: kibana.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
    - host: grafana.osber.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
